--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 				</div>
 				<div class="panel-body">
 					> whois<br />
-					控损工作室 Damage Control Studio<br />
+					控损工作室 | Damage Control Studio<br />
 					主要研究领域为神经科学和人工神经网络<br />
 					<span id="shine">> |</span>
 					<script language="JavaScript" type="text/javascript">
