--- a/index.html
+++ b/index.html
@@ -2,42 +2,51 @@
 layout: default
 ---
 
+<!-- 巨幕 -->
+<div class="jumbotron" style="background-color: white; text-align: center;">
+	<img src="/img/banner.png" />
+</div>
+
+<!-- 装饰件：终端 -->
 <div class="panel panel-info">
-				<div class="panel-heading">
-					<h3 class="panel-title">欢迎</h3>
-				</div>
-				<div class="panel-body">
-					> whois<br />
-					控损工作室 Damage Control Studio<br />
-					主要研究领域为神经科学和人工神经网络<br />
-					<span id="shine">> |</span>
-					<script language="JavaScript" type="text/javascript">
-						var flag = true;
-						setInterval(function(){
-							if(flag) {
-								document.getElementById("shine").childNodes[0].nodeValue=">";
-								flag = false;
-							} else {
-								document.getElementById("shine").childNodes[0].nodeValue="> |";
-								flag = true;
-							}
-						},500);
-					</script>
-				</div>
+	<div class="panel-heading">
+		<h3 class="panel-title">终端 | Terminal</h3>
+	</div>
+	<div class="panel-body">
+		> whois<br />
+		控损工作室 Damage Control Studio<br />
+		> major<br />
+		主要研究领域为神经科学和人工神经网络<br />
+		<span id="shine">> |</span>
+		<script language="JavaScript" type="text/javascript">
+			var flag = true;
+			setInterval(function(){
+				if(flag) {
+					document.getElementById("shine").childNodes[0].nodeValue=">";
+					flag = false;
+				} else {
+					document.getElementById("shine").childNodes[0].nodeValue="> |";
+					flag = true;
+				}
+			},500);
+		</script>
+	</div>
+</div>
+
+<!-- 展示项目 -->
+<div class="row">{% for post in site.posts %} {% if post.img %}
+	<div class="col-sm-6 col-md-4">
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<h3 class="panel-title">{{ post.title }}</h3>
 			</div>
-			<div class="row">{% for post in site.posts %} {% if post.img %}
-				<div class="col-sm-6 col-md-4">
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							<h3 class="panel-title">{{ post.title }}</h3>
-						</div>
-						<div class="panel-body">
-							<div class="thumbnail">
-								<img src="{{ site.baseurl }}/img/{{ post.img }}" />
-							</div>
-							<blockquote><p>{{ post.description }}</p></blockquote>
-							<a class="btn btn-info" href="{{ post.url }}" role="button">阅读详情</a>
-						</div>
-					</div>
-				</div>{% endif %} {% endfor %}
+			<div class="panel-body">
+				<div class="thumbnail">
+					<img src="{{ site.baseurl }}/img/{{ post.img }}" />
+				</div>
+				<blockquote><p>{{ post.description }}</p></blockquote>
+				<a class="btn btn-info" href="{{ post.url }}" role="button">阅读详情</a>
 			</div>
+		</div>
+	</div>{% endif %} {% endfor %}
+</div>
