--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 		控损工作室 Damage Control Studio<br />
 		> major<br />
 		主要研究领域为神经科学和人工神经网络<br />
-		<span id="shine">> |</span>
+		<span id="shine">> ▌</span>
 		<script language="JavaScript" type="text/javascript">
 			var flag = true;
 			setInterval(function(){
@@ -25,7 +25,7 @@ layout: default
 					document.getElementById("shine").childNodes[0].nodeValue=">";
 					flag = false;
 				} else {
-					document.getElementById("shine").childNodes[0].nodeValue="> |";
+					document.getElementById("shine").childNodes[0].nodeValue="> ▌";
 					flag = true;
 				}
 			},500);
