--- a/blog.html
+++ b/blog.html
@@ -9,12 +9,14 @@ title: 思考奇
       {% for post in posts_without_showcase %}
       <div class="box" style="background-color:#{{post.color}}">
             {% if post.img %}
+            <a href="{{post.url | prepend: site.baseurl}}">
             <img class="feat-image" src={{ "/images/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
+            </a>
             {% endif %}
             <div class="container">
-                <h4>{{post.title}}</h4>
+                <h3><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h3>
                 <p>{{post.description}}</p>
-                 <div class="action">{{ post.date | date: '%B %d, %Y' }}<a href="{{post.url | prepend: site.baseurl}}"><i class="fa fa-arrow-right" aria-hidden="true"></i></a></div> 
+                <div class="action">{{ post.date | date: '%B %d, %Y' }}<a href="{{post.url | prepend: site.baseurl}}"><i class="fa fa-arrow-right" aria-hidden="true"></i></a></div> 
             </div>   
       </div>
       {% endfor %}
