--- a/404.html
+++ b/404.html
@@ -4,21 +4,10 @@ title: 404
 ---
 
 <div id="container">
-    <div id="grid" data-columns class="cols">
-      {% assign posts_without_showcase = site.posts | where_exp: "post", "post.showcase != true" %}
-      {% for post in posts_without_showcase %}
-      <div class="box" style="background-color:#{{post.color}}">
-            {% if post.img %}
-            <img class="feat-image" src={{ "/images/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
-            {% endif %}
-            <div class="container">
-                <h4>{{post.title}}</h4>
-                <p>{{post.description}}</p>
-                 <div class="action">{{ post.date | date: '%B %d, %Y' }}<a href="{{post.url | prepend: site.baseurl}}"><i class="fa fa-arrow-right" aria-hidden="true"></i></a></div> 
-            </div>   
-      </div>
-      {% endfor %}
-   </div>
+  <header>
+    <h1>404 网页不存在</h1>
+    {% include mininav.html %}
+  </header>
 </div>
     
 <script src="{{site.baseurl}}/js/salvattore.min.js"></script>
