--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <a class="nav-link" href="#">主页 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./blog.html" target="_blank">思考奇</a>
+                  <a class="nav-link" href="/blog.html" target="_blank">思考奇</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#our-team">团队介绍</a>
@@ -229,7 +229,7 @@
                   <a class="nav-link" href="#our-services">研究方向与愿景</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./blog.html" target="_blank">思考奇</a>
+                  <a class="nav-link" href="/blog.html" target="_blank">思考奇</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#recent-works">近期项目</a>
