--- a/index.html
+++ b/index.html
@@ -185,25 +185,35 @@
           <table class="table table-striped table-responsive-md">
             <thead>
               <tr>
-                <th>内容</th>
+                <th>项目</th>
+                <th>名称</th>
                 <th>作者</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>主题</td>
+                <td>Shards</td>
                 <td>DesignRevision</td>
               </tr>
               <tr>
-                <td>大脑 SVG</td>
+                <td>主题</td>
+                <td>Karna</td>
+                <td>sharath Kumar</td>
+              </tr>
+              <tr>
+                <td>图片</td>
+                <td>大脑</td>
                 <td>ACworks</td>
               </tr>
               <tr>
-                <td>封面 Firmware</td>
+                <td>图片</td>
+                <td>Firmware</td>
                 <td>unDraw</td>
               </tr>
               <tr>
-                <td>星球大战头像</td>
+                <td>头像</td>
+                <td>星球大战</td>
                 <td>Filipe Carvalho</td>
               </tr>
             </tbody>
