--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ title: 404
 
 <div id="container">
   <header>
-    <h1>404 网页不存在</h1>
+    <h1>网页不存在</h1>
     {% include mininav.html %}
   </header>
 </div>
