--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="{{site.url}}/css/shards.min.css?v=3.0.0">
       <link rel="stylesheet" href="{{site.url}}/css/shards-extras.min.css?version=3.0.0">
+      <link rel="icon" href="{{site.url}}/favicon.ico" type="image/x-icon" />
     </head>
     <body class="shards-landing-page--1">
       <!-- Welcome Section -->
