--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
       <!-- ? Section -->
       <div class="contact section-invert py-4">
         <h3 class="section-title text-center m-5">特别感谢</h3>
-        <div class="col-md-10 ml-auto mr-auto">
-          <table class="table table-striped table-responsive-md">
+        <!-- <div class="col-md-10 ml-auto mr-auto"> -->
+        <div class="container">
+          <table class="table table-striped">
             <thead>
               <tr>
                 <th>项目</th>
@@ -228,9 +229,9 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
             &copy; 2019 - {{site.time | date: '%Y'}} 控损工作室
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
