--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <!-- Navigation -->
           <nav class="navbar navbar-expand-lg navbar-dark pt-4 px-0">
             <a class="navbar-brand" href="#">
-              <img src="images/agency-landing/logo-white.png" class="mr-2" alt="控损工作室">
+              <img src="images/agency-landing/logo-light.svg" class="mr-2" height="32" alt="控损工作室">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -206,7 +206,7 @@
               <tr>
                 <td>图片</td>
                 <td>大脑</td>
-                <td>ACworks</td>
+                <td>Peter Selinger</td>
               </tr>
               <tr>
                 <td>图片</td>
