--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
       <title>控损工作室</title>
-      <meta name="description" content="">
+      <meta name="description" content="仿生构建人工神经网络；探索生物神经系统工作原理；">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- CSS Dependencies -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
