--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
       <title>控损工作室</title>
-      <meta name="description" content="仿生构建人工神经网络；探索生物神经系统工作原理；">
+      <meta name="description" content="仿生构建人工神经网络；探索生物神经系统的奥秘；">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- CSS Dependencies -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -61,7 +61,7 @@
           <div class="row">
             <div class="col-md-7">
                 <h1 class="welcome-heading display-4 text-white">控损 工作室</h1>
-                <p class="text-white">研究方向：仿生构建人工神经网络；探索生物神经系统工作原理；</p>
+                <p class="text-white">研究方向：仿生构建人工神经网络；探索生物神经系统的奥秘；</p>
                 <a href="#recent-works" class="btn btn-lg btn-outline-white btn-pill align-self-center">近期项目</a>
             </div>
           </div>
