--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: 思考奇
+title: 博客
 ---
 
 <div id="container">
     <header>
-        <h1>博客 / 随笔 / 踩坑 / 思考奇</h1>
+        <h1>博客 / 随笔 / 踩坑</h1>
         {% include mininav.html %}
     </header>
     <div id="grid" data-columns class="cols">
