--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                   <a class="nav-link" href="#">主页 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/blog.html" target="_blank">思考奇</a>
+                  <a class="nav-link" href="/blog.html" target="_blank">博客</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://www.sikao.ml" target="_blank">思考奇</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#our-team">团队介绍</a>
@@ -241,7 +244,10 @@
                   <a class="nav-link" href="#our-services">研究方向与愿景</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/blog.html" target="_blank">思考奇</a>
+                  <a class="nav-link" href="/blog.html" target="_blank">博客</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://www.sikao.ml" target="_blank">思考奇</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#recent-works">近期项目</a>
