更新 bootstrap 和 font awesome 的 cdn

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <meta name="description" content="仿生构建人工神经网络；探索生物神经系统的奥秘；">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- CSS Dependencies -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+      <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
       <link rel="stylesheet" href="{{site.url}}/css/shards.min.css?v=3.0.0">
       <link rel="stylesheet" href="{{site.url}}/css/shards-extras.min.css?version=3.0.0">
       <link rel="icon" href="{{site.url}}/favicon.ico" type="image/x-icon" />
